# omniscient

./: README.md  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: release.yaml
assets/brand/: icon.icns
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: cli.rs  lib.rs  logging.rs  main.rs  wrappers.rs
src-tauri/src/commands/: cpu.rs  disk.rs  memory.rs  metadata.rs  mod.rs  network.rs  process.rs
src-tauri/src/models/: cpu.rs  disk.rs  metadata.rs  mod.rs  process.rs
src-tauri/src/states/: mod.rs  system.rs
src/app/: globals.css  hooks.ts  layout.tsx  page.tsx  providers.tsx
src/app/about/: hooks.ts  hooks.tsx  page.tsx
src/app/components/: CpuModal.tsx  DiskModal.tsx  NetworkChart.tsx  NetworkIndicator.tsx  ResourceCard.tsx
src/app/process-list/: hooks.ts  page.tsx
src/app/process-list/components/: KillProcessModal.tsx
src/components/: MainNav.tsx
src/components/icons/: ArrowSmallDown.tsx  ArrowSmallUp.tsx  Cog.tsx  ListBullet.tsx  QuestionMarkCircle.tsx
src/shared/: types.ts
